feat(device) detect brand OPPO model: A16s (CPH2271) feat(device) detect brand Tecno Mobile model: Camon 12 (TECNO CC7S)
feat(device) added test detect brand Nubia model: N11

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12965,6 +12965,8 @@ OPPO:
       model: 'A12'
     - regex: '(?:CPH2179)(?:[);/ ]|$)'
       model: 'A15s'
+    - regex: '(?:CPH2271)(?:[);/ ]|$)'
+      model: 'A16s'
     - regex: '(?:CPH2185)(?:[);/ ]|$)'
       model: 'A15'
     - regex: 'PCHM00(?:[);/ ]|$)'
@@ -16759,7 +16761,7 @@ Tecno Mobile:
       model: 'Camon 11'
     - regex: 'Tecno[ _]CF8(?:[);/ ]|$)'
       model: 'Camon 11 Pro'
-    - regex: 'Tecno[ _]CC7(?:[);/ ]|$)'
+    - regex: 'Tecno[ _]CC7S?(?:[);/ ]|$)'
       model: 'Camon 12'
     - regex: 'Tecno[ _](?:CC6|KC3)(?:[);/ ]|$)'
       model: 'Camon 12 Air'
