--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -2445,3 +2445,21 @@
     model: TX9s
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; GTX-R10i Pro Build/GTX; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/92.0.4515.131 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 92.0.4515.131
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Geotex
+    model: GTX-R10i Pro
+  os_family: Android
+  browser_family: Chrome
