feat(device) detect brand Mobicel model: Rio SS

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2966,7 +2966,7 @@ Blu:
     - regex: 'R([12]) PLUS'
       model: 'R$1 Plus'
     - regex: 'C([456]) 20(19|20)'
-      model: 'C$1 20($2)'
+      model: 'C$1 (20$2)'
     - regex: 'Tank Xtreme ([45]).0'
       model: 'Tank Xtreme $1.0"'
     - regex: 'Tank Xtreme Pro'
@@ -11422,7 +11422,7 @@ Mobiola:
 
 # Mobicel or Mobicell
 Mobicel:
-  regex: 'Mobicel_(R1)|ASTRO(?: Build|[;)]|$)|(?:R7_1|HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS)|R1PLUS_1|ZOOM-H|REBEL|LEGEND MAX|Switch[ _]GO|PULSE_1|TRENDY 2|FEVER_PLUS_H)(?:[);/ ]|$)'
+  regex: 'Mobicel_(R1)|ASTRO(?: Build|[;)]|$)|(?:R7_1|HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS)|R1PLUS_1|ZOOM-H|REBEL|LEGEND MAX|Switch[ _]GO|PULSE_1|TRENDY 2|FEVER_PLUS_H|RIO_SS)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Matrix'
@@ -11459,6 +11459,8 @@ Mobicel:
       model: 'Rebel'
     - regex: 'R7_1'
       model: 'R7'
+    - regex: 'RIO_SS'
+      model: 'Rio SS'
     - regex: 'Switch[ _]GO'
       model: 'Switch Go'
     - regex: 'R1PLUS_1'
