feat(device) detect brand OPPO model: A79 (A79kt) feat(device) detect brand LG models: X Venture (US701), X401 (LGM-X401L), X400 (LGM-K121L, LGM-K121K),  G6 (LGM-G600K), Aristo (LGMS210), Stylus 2 (LG-F720L), G Pad X 8.0" (LG-V520) feat(device) detect brand Nomi models: Note-X (i6030), Space M1 (i5511), Ultra 3 LTE (C101030),  Ultra 3 3G (C101012), Corsa 3 LTE (C070030), Corsa 3 3G (C070012), Corsa 2 (C070011),

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10166,7 +10166,7 @@ LG:
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
-    - regex: 'VS988|LG-H87(?:[01](?:DS|[SI]|AR)?|[23])|LG-?US997|LGM-G600[SL]|LG-[AL]S993'
+    - regex: 'VS988|LG-H87(?:[01](?:DS|[SI]|AR)?|[23])|LG-?US997|LGM-G600[SKL]|LG-[AL]S993'
       model: 'G6'
     - regex: 'LM-Q850'
       model: 'G7 Fit'
@@ -10258,7 +10258,7 @@ LG:
       model: 'Q Stylus'
     - regex: 'LG-M400'
       model: 'Stylus 3'
-    - regex: 'LG-(?:K520|F720S)'
+    - regex: 'LG-(?:K520|F720[SL])'
       model: 'Stylus 2'
     - regex: 'LG-(?:K53[05])'
       model: 'Stylus 2 Plus'
@@ -10332,7 +10332,7 @@ LG:
       model: 'X Skin'
     - regex: 'LG-K500'
       model: 'X Screen'
-    - regex: 'LG-(?:M710|H700)'
+    - regex: 'LG-(?:M710|H700|US701)'
       model: 'X Venture'
     - regex: 'LM-X510WM'
       model: 'X Power 3'
@@ -10356,8 +10356,10 @@ LG:
       model: 'Volt'
     - regex: 'LM-X410'
       model: 'LM-X410'
-    - regex: 'LGM-K121S'
+    - regex: 'LGM-K121'
       model: 'X400'
+    - regex: 'LGM-X401L'
+      model: 'X401'
     - regex: 'LM-X420N'
       model: 'X4 (2019)'
     - regex: '(?:LG-X230|VS425)(?:[);/ ]|$)'
@@ -10574,6 +10576,9 @@ LG:
     - regex: 'VK815'
       model: 'G Pad X 8.3'
       device: 'tablet'
+    - regex: 'LG-V520'
+      model: 'G Pad X 8.0"'
+      device: 'tablet'
     - regex: 'LGT32'
       model: 'Qua Tad PZ'
       device: 'tablet'
@@ -10603,6 +10608,8 @@ LG:
       model: '$1'
     - regex: 'LG[ _\-](V90.*|Optimus[ _\-]Pad.*) Build'
       device: 'tablet'
+      model: '$1'
+    - regex: 'LGM-([^/;]*)( Build|[;)])'
       model: '$1'
     - regex: 'LG(?:/|-LG| |-)?([^/;]*) Build'
       model: '$1'
@@ -12339,6 +12346,8 @@ Nomi:
       model: 'i506 Shine'
     - regex: 'Nomi[ _]i5730(?:[);/ ]|$)'
       model: 'i5730 Infinity'
+    - regex: 'Nomi[ _]i6030(?:[);/ ]|$)'
+      model: 'Note-X'
     - regex: 'I5070(?:[);/ ]|$)'
       model: 'Iron-X'
     - regex: 'i5071(?:[);/ ]|$)'
@@ -12359,6 +12368,8 @@ Nomi:
       model: 'Space X2'
     - regex: 'i5510(?:[);/ ]|$)'
       model: 'Space M'
+    - regex: 'Nomi[_ ]i5511(?:[);/ ]|$)'
+      model: 'Space M1'
     - regex: '(?:Nomi_)?i5710(?:[);/ ]|$)'
       model: 'Infinity X1'
     - regex: '(?:Nomi[ _])?i(50[015]|450|40[01]|55[02])(?:[);/ ]|$)'
@@ -12368,6 +12379,12 @@ Nomi:
       device: 'tablet'
     - regex: '(?:Nomi_)?C101040'
       model: 'Ultra 3 Pro'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C101030'
+      model: 'Ultra 3 LTE'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C101012'
+      model: 'Ultra 3 3G'
       device: 'tablet'
     - regex: '(?:Nomi_)?C101014'
       model: 'Ultra 4 3G'
@@ -12386,6 +12403,12 @@ Nomi:
       device: 'tablet'
     - regex: '(?:Nomi_)?C070011'
       model: 'Corsa 2'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C070030'
+      model: 'Corsa 3 LTE'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C070012'
+      model: 'Corsa 3 3G'
       device: 'tablet'
     - regex: '(?:Nomi_)?C070014L'
       model: 'Corsa 4 Light 3G'
@@ -13042,6 +13065,8 @@ OPPO:
       model: 'A72n 5G'
     - regex: '(?:OPPO[ _]?)?CPH1715(?:[);/ ]|$)'
       model: 'A77'
+    - regex: '(?:OPPO[ _]?)?A79kt'
+      model: 'A79'
     - regex: 'PCD[TM]00(?:[);/ ]|$)'
       model: 'A7n'
     - regex: '(PBBT00|PBBM00)(?:[);/ ]|$)'
