--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6579,7 +6579,7 @@ Ginzzu:
 
 # Gionee
 Gionee:
-  regex: '(?:GIO-)?GIONEE[ _-]?[a-z0-9]+|(?:Dream_D1|V188S?|GN[0-9]{3,4}[a-z]?)(?:[);/ ]|$)|F103(?: Pro)?(?: Build|\))|P5 mini Build|P7 Max Build|(M7 Power|F106L|F100A|F103S|F103 Pro)(?:[);/ ]|$)'
+  regex: '(?:GIO-)?GIONEE[ _-]?[a-z0-9]+|(?:Dream_D1|V188S?|GN[0-9]{3,4}[a-z]?)(?:[);/ ]|$)|F103(?: Pro)?(?: Build|\))|P5 mini Build|P7 Max Build|(M7 Power|F106L|F100A|F103S|F103 Pro|M6 mirror)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'GN810(?:[);/ ]|$)'
@@ -6597,6 +6597,8 @@ Gionee:
       model: 'P7 Max'
     - regex: '(S11|F205) Lite(?:[);/ ]|$)'
       model: '$1 Lite'
+    - regex: 'M6 mirror(?:[);/ ]|$)'
+      model: 'M6 Mirror'
     - regex: 'F103( Pro)?( BUILD|\))'
       model: 'F103$1'
     - regex: '(?:(?:GIO-)?GIONEE[ _-])?Dream_D1(?:[);/ ]|$)'
@@ -7116,7 +7118,7 @@ Minix:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei(?!Browser)|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANA|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|FRL|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JEF|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PPA|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))(?:[);/ ]|$))|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|YOK-AN00|NIC-LX1A|MRX-(AL09|W09)|CDY-(?:[AT]N00|AN[29]0|NX9[AB])|GLK-(?:[AT]L00|LX1U)|JER-(?:AN20|[AT]N10)|ELS-(?:[AT]N[10]0|NX9|N39|N04)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL[02]0|LX9N)|NTS-AL00|ART-(?:[AT]L00[xm]|L29N?|L28)|MED-(?:[AT]L00|LX9N?)|EBG-(?:AN[01]0|TN00)|ANA-(?:[AT]N00|NX9)|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-[AT]N(?:00a?|10)|KKG-AN00|MXW-[AT]N00|JKM-AL00[ab]|TAH-(?:N29|AN00)m|C8817D|T1-821W|d-01[JK]|d-02[HK]|KRJ-W09|HWT31|Y320-U10|Y541-U02|VAT-L19|70[14]HW|60[58]HW|NOH-(?:NX9|AN00)|TNNH-AN00|LIO-(?:[TA]L00|[LN]29|AN00)|KOB2-[LW]09|AGS3-[WL]09|DNN-LX9|NEY-NX9|LON-AL00|HLK-L41|503HW|AGR-[LW]09|PPA-LX[12]|ANG-AN00|NOP-AN00|ALA-AN70|DVC-[AT]N20|302HW|Nexus 6P|DBY-W09|WKG-LX9|JSC-AN00'
+  regex: '(HW-)?(?:Huawei(?!Browser)|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANA|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|FRL|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JEF|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PPA|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))(?:[);/ ]|$))|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|YOK-AN00|NIC-LX1A|MRX-(AL09|W09)|CDY-(?:[AT]N00|AN[29]0|NX9[AB])|GLK-(?:[AT]L00|LX1U)|JER-(?:AN20|[AT]N10)|ELS-(?:[AT]N[10]0|NX9|N39|N04)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL[02]0|LX9N)|NTS-AL00|ART-(?:[AT]L00[xm]|L29N?|L28)|MED-(?:[AT]L00|LX9N?)|EBG-(?:AN[01]0|TN00)|ANA-(?:[AT]N00|NX9)|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-[AT]N(?:00a?|10)|KKG-AN00|MXW-[AT]N00|JKM-AL00[ab]|TAH-(?:N29|AN00)m|C8817D|T1-821W|d-01[JK]|d-02[HK]|KRJ-W09|HWT31|Y320-U10|Y541-U02|VAT-L19|70[14]HW|60[58]HW|NOH-(?:NX9|AN00)|TNNH-AN00|LIO-(?:[TA]L00|[LN]29|AN00)|KOB2-[LW]09|AGS3-[WL]09|DNN-LX9|NEY-NX9|LON-AL00|HLK-L41|503HW|AGR-[LW]09|PPA-LX[12]|ANG-(?:AN00|LX1)|NOP-AN00|ALA-AN70|DVC-[AT]N20|302HW|Nexus 6P|DBY-W09|WKG-LX9|JSC-AN00'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a(?:[);/ ]|$)'
@@ -7505,6 +7507,8 @@ Huawei:
       model: 'Nova 7 SE 5G'
     - regex: 'JNY-LX2(?:[);/ ]|$)'
       model: 'Nova 7i'
+    - regex: 'ANG-LX1(?:[);/ ]|$)'
+      model: 'Nova 8'
     - regex: 'ANG-AN00(?:[);/ ]|$)'
       model: 'Nova 8 5G'
     - regex: 'JSC-AN00(?:[);/ ]|$)'
@@ -8743,10 +8747,10 @@ iTel:
       model: 'A22'
     - regex: 'L5503'
       model: 'A46'
-    - regex: '[LW]6004'
-      model: 'A56 LTE'
     - regex: 'W6004P'
       model: 'A56 Pro'
+    - regex: '[LW]6004'
+      model: 'A56 LTE'
     - regex: 'W6001'
       model: 'P33 Plus'
     - regex: 'W6003'
@@ -9339,12 +9343,14 @@ AIS:
 
 # Lava (Lavamobiles.com)
 Lava:
-  regex: 'Lava[ _]|LAVA(?:A1|X10)|(?:DISCOVER136|KKT QUADRA)|iris[ _]?([^/;]+)(?:\)| Build)|A(?:67|76) Build|X1 Selfie Build|X41 Plus Build|(?:Flair Z1|PixelV1|Pixel V2\+?|Z60s|Z61_2GB|A97 IPS|A97 2GB PLUS|L[EH]9920(?:[_ ]P)?|L[NEH]9910|LH9810|Ivory(?:S1|S4G)?|A76Plus|Grand2c)(?:[);/ ]|$)'
+  regex: 'Lava[ _]|LAVA(?:A1|X10)|(?:DISCOVER136|KKT QUADRA)|iris[ _]?([^/;]+)(?:\)| Build)|A(?:67|76) Build|X1 Selfie Build|X41 Plus Build|(?:Flair Z1|PixelV1|Pixel V2\+?|Z60s|Z61_2GB|A97 IPS|A97 2GB PLUS|L[EH]9920(?:[_ ]P)?|L[NEH]9910|LH9810|Ivory(?:S1|S4G)?|A76Plus|Grand2c|AH9910)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
     - regex: 'Flair Z1(?:[);/ ]|$)'
       model: 'Flair Z1'
+    - regex: 'AH9910(?:[);/ ]|$)'
+      model: 'Benco Y40'
     - regex: 'A97 IPS(?:[);/ ]|$)'
       model: 'A97 IPS'
     - regex: 'A97 2GB PLUS(?:[);/ ]|$)'
@@ -9914,7 +9920,7 @@ Lenovo:
       model: 'K5'
     - regex: 'L38011(?:[);/ ]|$)'
       model: 'K5 Play'
-    - regex: 'L38041(?:[);/ ]|$)'
+    - regex: '(?:L38041|K5 Pro)(?:[);/ ]|$)'
       model: 'K5 Pro'
     - regex: 'L39051(?:[);/ ]|$)'
       model: 'K10 Plus'
@@ -10509,7 +10515,7 @@ LG:
       model: 'Harmony'
     - regex: 'LM-K400(?:[);/ ]|$)'
       model: 'Harmony 4'
-    - regex: '(?:LG-?)?(?:K220|LS755)'
+    - regex: '(?:LG-?)?(?:K220|LS755|F750K)'
       model: 'X Power'
     - regex: '(?:LG-?)?M320'
       model: 'X Power 2'
@@ -11225,7 +11231,7 @@ Meizu:
     - regex: '(?:MZ-|Meizu-)?m([1-6])[_ ]note(?:[);/ ]|$)'
       device: 'phablet'
       model: 'M$1 Note'
-    - regex: 'M1 E(?:[);/ ]|$)'
+    - regex: '(?:MZ-)?M1 E(?:[);/ ]|$)'
       model: 'M1E'
     - regex: 'M2 E(?:[);/ ]|$)'
       model: 'M2E'
@@ -11246,6 +11252,8 @@ Meizu:
       model: '$1'
     - regex: '(?:MZ-)?M3S(?:[);/ ]|$)'
       model: 'M3s'
+    - regex: '(?:MZ-)?M3 Max(?:[);/ ]|$)'
+      model: 'M3 Max'
     - regex: 'M5S|M612C'
       model: 'M5S'
     - regex: '(M04[05]|MX[ -]?2)(?:[);/ ]|$)'
@@ -11266,7 +11274,6 @@ Meizu:
       model: 'M8 Lite'
     - regex: 'M8c Pro(?:[);/ ]|$)'
       model: 'M8c Pro'
-
     - regex: 'PRO 7-[HS](?:[);/ ]|$)'
       model: 'PRO 7'
     - regex: 'PRO 7 Plus(?:[);/ ]|$)'
@@ -11285,8 +11292,6 @@ Meizu:
       model: '16th Plus'
     - regex: 'MZ-15 Plus(?:[);/ ]|$)'
       model: '15 Plus'
-    - regex: 'M3 Max(?:[);/ ]|$)'
-      model: 'M3 Max'
     - regex: '(?:MZ-15 Lite| 15 Lite)(?:[);/ ]|$)'
       model: '15 Lite'
     - regex: 'MZ-16th| 16th(?:[);/ ]|$)'
@@ -11295,6 +11300,8 @@ Meizu:
       model: '16X'
     - regex: 'meizu (17|C9) Pro(?:[);/ ]|$)'
       model: '$1 Pro'
+    - regex: 'MZ-?M3(?:[);/ ]|$)'
+      model: 'M3'
     - regex: 'Meizu[_ ]note([89])(?:[);/ ]|$)'
       device: 'phablet'
       model: 'Note $1'
