feat(device) detect brand Samsung model: Galaxy Tab 3 8.0" 3G (SM-T312) feat(device) added test brand Samsung model: Galaxy Tab 4 10.1" WiFi (SM-T533)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14218,6 +14218,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T310'
       device: 'tablet'
       model: 'Galaxy Tab 3 8.0" WiFi'
+    - regex: '(?:SAMSUNG-)?SM-T312'
+      device: 'tablet'
+      model: 'Galaxy Tab 3 8.0" 3G'
     - regex: '(?:SAMSUNG-)?SM-T311'
       device: 'tablet'
       model: 'Galaxy Tab 3 8.0"'
